# FastBurger

./: .gitignore  pyproject.toml  requirements.txt  setup.py
burgers/: fastq_parser.py  test.fastq  test_parser.py
