[tool.poetry]
name = "FastBurger"
version = "0.1.0"
authors = ["alibioinfo39 <lic.aragones@gmail.com>"]
description = "A package for data analysis"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.3"
numpy = "^1.21"
matplotlib = "^3.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
